Fix overlapping volume fill

--- a/style/sheets/volumeSlider.scss
+++ b/style/sheets/volumeSlider.scss
@@ -1,9 +1,9 @@
 @import '../colors';
 
-$width: 180px;
+$width: 150px;
 $height: 40px;
 $bar-height: 10px;
-$border-radius: 8px;
+$border-radius: 28px;
 $bar-color: transparent;
 $cursor-size: 20px;
 $cursor-border-size: 3px;
